# ukui-desktop

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  mate-version.xml.in.in
docs/reference/: Makefile.am
docs/reference/mate-desktop/: Makefile.am  mate-desktop-sections.txt
docs/reference/ukui-desktop/: ukui-desktop-docs.sgml  ukui-desktop.types
icons/: Makefile.am
libmate-desktop/: Makefile.am  edid.h  mate-bg-crossfade.c  mate-bg-crossfade.h  mate-bg.c  mate-bg.h  mate-colorbutton.c  mate-colorbutton.h  mate-colorsel.c  mate-dconf.h  mate-desktop-item.c  mate-desktop-item.h  mate-desktop-thumbnail.c  mate-desktop-utils.c  mate-desktop.h  mate-rr-config.c  private.h  ukui-colorseldialog.c  ukui-dconf.c  ukui-desktop-utils.h  ukui-rr-config.h  ukui-rr-labeler.c  ukui-rr-labeler.h  ukui-rr-output-info.c  ukui-rr-private.h  ukui-rr.h
libukui-desktop/: display-name.c  pnp.ids  test-ditem.c  test.c  ukui-colorsel.h  ukui-colorseldialog.h  ukui-desktop-2.0-uninstalled.pc.in  ukui-desktop-2.0.pc.in  ukui-desktop-thumbnail.h  ukui-gsettings.c  ukui-gsettings.h  ukui-rr.c  ukui-thumbnail-pixbuf-utils.c
man/: Makefile.am  mate-about.1  mate-color-select.1
mate-about/: mate-about.c  mate-about.h  ukui-about.desktop.in.in
po/: POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  (+77 more)
schemas/: Makefile.am  org.mate.accessibility-keyboard.gschema.xml.in  org.mate.applications-at-visual.gschema.xml.in  org.mate.applications-browser.gschema.xml.in  org.mate.debug.gschema.xml.in  org.mate.file-views.gschema.xml.in  org.mate.lockdown.gschema.xml.in  org.mate.sound.gschema.xml.in  org.mate.thumbnail-cache.gschema.xml.in  org.mate.typing-break.gschema.xml.in  org.ukui.accessibility-startup.gschema.xml.in  org.ukui.applications-at-mobility.gschema.xml.in  org.ukui.applications-office.gschema.xml.in  org.ukui.applications-terminal.gschema.xml.in  org.ukui.background.gschema.xml.in  org.ukui.interface.gschema.xml.in  org.ukui.peripherals-mouse.gschema.xml.in  org.ukui.thumbnailers.gschema.xml.in
tools/: Makefile.am  mate-color-select.c  mate-color-select.desktop.in.in
ukui-about/: Makefile.am
